fix: Phosphor icons not showing

--- a/src/scss/user-settings/_user-settings-fallback.scss
+++ b/src/scss/user-settings/_user-settings-fallback.scss
@@ -92,14 +92,17 @@
   @include createSfSymbol("alarm", "􀐭");
   @include createSfSymbol("arrow-down-circle-fill", "􀁹");
   @include createSfSymbol("arrow-triangle-2-circlepath", "􀊯");
+  @include createSfSymbol("arrow-up-arrow-down", "􀄬");
   @include createSfSymbol("arrow-up-circle-fill", "􀁷");
   @include createSfSymbol("arrow-up-forward-app", "􀮵");
   @include createSfSymbol("arrow-up-right-square-fill", "􀄕");
   @include createSfSymbol("bold", "􀅓");
   @include createSfSymbol("calendar", "􀉉");
   @include createSfSymbol("character", "􀀄");
-  @include createSfSymbol("checkmark-circle", "􀁢");
   @include createSfSymbol("checkmark", "􀆅");
+  @include createSfSymbol("checkmark-circle", "􀁢");
+  @include createSfSymbol("checkmark-diamond", "􁁚");
+  @include createSfSymbol("checkmark-square", "􀃲");
   @include createSfSymbol("chevron-backward", "􀯶");
   @include createSfSymbol("chevron-down", "􀆈");
   @include createSfSymbol("chevron-forward", "􀯻");
@@ -126,7 +129,6 @@
   @include createSfSymbol("minus", "􀅽");
   @include createSfSymbol("paperclip", "􀉢");
   @include createSfSymbol("person-2", "􀉫");
-  @include createSfSymbol("person", "􀉩");
   @include createSfSymbol("plus-circle", "􀁌");
   @include createSfSymbol("sidebar-left", "􀏚");
   @include createSfSymbol("square-and-arrow-down", "􀈄");
